[package]
name = "h1_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.10.10"       
ic-cdk = "0.16.0"        
serde = "1.0.203"         
ic-cdk-macros = "0.16.0"  
serde_bytes = "0.11"      
rand_core = "0.6"          